git-svn-id: file:///media/LinuxData/Development/SVN/KKFileManager@3 a79225d0-820b-45e5-91ec-798c379b4a54

--- a/configure.ac
+++ b/configure.ac
@@ -26,5 +26,5 @@ PKG_CHECK_MODULES(GTK, $GTK_MODULES)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
-AC_OUTPUT(Makefile KKFileManager/app/Makefile KKFileManager/debug/Makefile)
+AC_OUTPUT(Makefile KKFileManager/app/Makefile)
 
