--- a/KKFileManager/resources/pixmaps/KKFileManager.desktop
+++ b/KKFileManager/resources/pixmaps/KKFileManager.desktop
@@ -1,4 +1,3 @@
-
 [Desktop Entry]
 Version=1.0
 Encoding=UTF-8
@@ -7,4 +6,5 @@ Comment=
 Terminal=false
 Type=Application
 Categories=Utility;
-Name[en_US]=KKFileManager
+Icon=KKFileManager
+Exec=kkfilemanager
