Added new connection dialog

--- a/configfiles/connect/connect.conf
+++ b/configfiles/connect/connect.conf
@@ -23,7 +23,7 @@ VARIABLE:char		*userName=getenv("USER"):global
 VARIABLE:char		*password=NULL:global
 VARIABLE:char		*server=NULL:global
 VARIABLE:char		*shareName=NULL:global
-VARIABLE:char		*mountNetCommand=NULL:global
+VARIABLE:char		*portName=NULL:global
 
 BEGINHBOX
 label:"User\\t\\t"
@@ -38,6 +38,11 @@ ENDHBOX
 BEGINHBOX
 label:"Server\\t\\t"
 textbox::server:false
+ENDHBOX
+
+BEGINHBOX
+label:"Port\\t\\t\\t"
+textbox::portName:false
 ENDHBOX
 
 BEGINHBOX
