Added new connection dialog

--- a/configfiles/connect/connect.conf
+++ b/configfiles/connect/connect.conf
@@ -27,38 +27,38 @@ VARIABLE:char		*portName=NULL:global
 
 BEGINHBOX
 label:"User\\t\\t"
-textbox::userName:false
+textbox:usertag::userName:false
 ENDHBOX
 
 BEGINHBOX
 label:"Password\\t"
-textbox::password:false
+textbox:passtag::password:false
 ENDHBOX
 
 BEGINHBOX
 label:"Server\\t\\t"
-textbox::server:false
+textbox:servertag::server:false
 ENDHBOX
 
 BEGINHBOX
 label:"Port\\t\\t\\t"
-textbox::portName:false
+textbox:porttag::portName:false
 ENDHBOX
 
 BEGINHBOX
 label:"Share\\t\\t"
-textbox::shareName:false
+textbox:sharetag::shareName:false
 ENDHBOX
 
 BEGINHBOX
 addexpand
-radio:SMB:true
+radio:smbtag:SMB:true
 addexpand
-radio:FTP:false
+radio:ftptag:FTP:false
 addexpand
-radio:SSH:false
+radio:sshtag:SSH:false
 addexpand
-radio:DAV:false
+radio:davtag:DAV:false
 addexpand
 ENDHBOX
 
